<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">    <modelVersion>4.0.0</modelVersion>    <parent>        <groupId>org.springframework.boot</groupId>        <artifactId>spring-boot-starter-parent</artifactId>        <version>3.1.5</version>        <relativePath/> <!-- lookup parent from repository -->    </parent>    <groupId>com.b2b</groupId>    <artifactId>backend</artifactId>    <version>0.0.1-SNAPSHOT</version>    <name>backend</name>    <description>Backend for bombay threads boutique</description>    <properties>        <java.version>17</java.version>    </properties>    <dependencies>        <!-- Default dependencies starts -->        <dependency>            <groupId>org.springframework.boot</groupId>            <artifactId>spring-boot-starter-web</artifactId>        </dependency>        <dependency>            <groupId>org.springframework.boot</groupId>            <artifactId>spring-boot-devtools</artifactId>            <scope>runtime</scope>            <optional>true</optional>        </dependency>        <dependency>            <groupId>org.springframework.boot</groupId>            <artifactId>spring-boot-starter-test</artifactId>            <scope>test</scope>        </dependency>        <!-- Default dependencies ends -->        <dependency>            <groupId>org.aspectj</groupId>            <artifactId>aspectjrt</artifactId>        </dependency>        <dependency>            <groupId>org.aspectj</groupId>            <artifactId>aspectjweaver</artifactId>        </dependency>    </dependencies>    <build>        <plugins>            <plugin>                <groupId>org.springframework.boot</groupId>                <artifactId>spring-boot-maven-plugin</artifactId>                <configuration>                    <image>                        <builder>paketobuildpacks/builder-jammy-base:latest</builder>                    </image>                </configuration>            </plugin>        </plugins>    </build></project>